K3S/ingress/netdata/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: netdata
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.netdata.merox.cloud`) # change to your domain
      kind: Rule
      services:
        - name: netdata
          port: 19999
    - match: Host(`netdata.merox.cloud`) # change to your domain
      kind: Rule
      services:
        - name: netdata
          port: 19999
      middlewares:
        - name: default-headers
#  tls:
#    secretName: X-tls # change to your cert name
